<resources>
    <string name="app_name">LZTana</string>
    <string name="app_camera_title">Fakan-tsary</string>
    <string name="app_camera_error">Tsy ahitana fakan-tsary ny findainao.</string>
    <string name="app_logout_message">Azonao antoka ve fa iala tokoa ianao?</string>
    <string name="app_internet_error_title">Aterineto</string>
    <string name="app_internet_error_message">Ampifandraiso amin\'ny aterineto ny findainao.</string>
    <string name="app_server_error_title">Olan\'i angona mpizara</string>
    <string name="app_server_error_message">Miala tsiny fa tsy misy valiny ny *RequestId*</string>
    <string name="app_other_category">- Hafa -</string>
    <string name="app_response_body_null">Tsy misy fampahalalana voaray.</string>
    <string name="app_filter_data_null">Tsy misy entana mifanaraka amin\'ilay fikarohana natao teo.</string>
    <string name="app_filter_data_size">Nahitana valiny miisa</string>
    <string name="app_payment_unity_type_text">Ariary</string>
    <string name="app_payment_symbole_type_ariary_text">AR</string>
    <string name="app_payment_symbole_type_euro_text">€</string>
    <string name="app_payment_symbole_type_dollar_text">$</string>
    <string name="app_payment_symbole_type_livre_text">¥</string>
    <string name="app_no_list_offer_message">Tsy misy olona namaly.</string>
    <string name="app_send_request_on_failure_title">Angona mpizara</string>
    <string name="app_send_request_on_failure_message">Tsy lasa ilay API</string>
    <string name="app_remarq_text_title">Fanamarinana</string>
    <string name="user_login_input_hint_phone">Laharana finday</string>
    <string name="user_login_input_error_phone">Mampidira laharana finday (tarehimarika 10)</string>
    <string name="user_login_input_hint_password">Teny miafina</string>
    <string name="user_login_input_error_password">Ampidiro ny teny miafina</string>
    <string name="user_login_text_forgot_password">Teny miafina adino</string>
    <string name="user_login_input_hint_forgot_password">Mampidira laharana finday</string>
    <string name="user_login_btn_submit">E K E N A</string>
    <string name="user_login_error_title">Fidirana</string>
    <string name="user_login_error_message">Hamarino ny laharana finday sy/na ny teny miafina.</string>
    <string name="user_login_error_request">Misy olana ny fifandraisana.</string>
    <string name="user_login_btn_register">Olona vaovao hanoratra anarana</string>
    <string name="app_spinner">Miandry .....</string>
    <string name="user_login_forgot_pass_text_title">Famerenana teny miafina</string>
    <string name="user_login_forgot_pass_btn_ok">ENY</string>
    <string name="user_login_forgot_pass_btn_cancel">TSIA</string>
    <string name="user_register_input_hint_name">Anarana</string>
    <string name="user_register_input_hint_firstName">Fanampiny</string>
    <string name="user_register_input_hint_region">Faritra</string>
    <string name="user_register_input_text_region">Misafidy faritra</string>
    <string name="user_register_input_hint_address">Adiresy</string>
    <string name="user_register_input_hint_email">Mailaka</string>
    <string name="user_register_input_hint_re_password">Amarino ny teny miafina</string>
    <string name="user_register_input_error_avatar">Alaivo ny sarinao</string>
    <string name="user_register_input_error_name">Mampidira anarana</string>
    <string name="user_register_input_error_firstName">Mampidira fanampin\'anarana</string>
    <string name="user_register_input_error_region">Misafidiana faritra iray</string>
    <string name="user_register_input_error_address">Mampidira adiresy</string>
    <string name="user_register_input_error_diff_password">Tsy mitovy ny teny miafina nampidirina</string>
    <string name="user_register_btn_submit">E K E N A</string>
    <string name="user_register_error_title">Olona vaovao</string>
    <string name="user_register_error_message">Hamarino ny laharana finday sy/na ny teny miafina.</string>
    <string name="user_register_error_licence">Tsy manana fahazoan-dàlana hanoratra anarana vaovao ianao!;</string>
    <string name="user_register_error_request">Misy olana ny fifandraisana.</string>
    <string name="user_register_camera_title">Sary</string>
    <string name="user_register_camera_message">Safidio ny fomba fakana sary</string>
    <string name="user_register_camera_app">Fakan-tsary</string>
    <string name="user_register_camera_galery">Tahirin-tsary</string>
    <string name="user_register_camera_error_failed">Miala tsiny fa tsy azo ilay sary.</string>
    <string name="user_register_camera_error_canceled">Najanona ny fakana sary.</string>
    <string name="user_register_camera_error_permission">Tsy ampy fahazoan-dàlana ny fakana sary.</string>
    <string name="user_register_camera_error_to_permission">Omeo fahazoan-dàlana vitsivitsy ny fitovana fakan-tsary mba hiasa tsara.</string>
    <string name="user_register_camera_btn_ok">Mandehana any amin\'ny fikirana</string>
    <string name="user_register_camera_btn_cancel">Aoka ihany</string>
    <string-array name="array_regions">
        <item>@string/user_register_input_error_region</item>
        <item>DIANA</item>
        <item>SAVA</item>
        <item>ITASY</item>
        <item>ANALAMANGA</item>
        <item>VAKINANKARATRA</item>
        <item>BONGOLAVA</item>
        <item>SOFIA</item>
        <item>BOENY</item>
        <item>BETSIBOKA</item>
        <item>MELAKY</item>
        <item>ALAOTRA-MANGORO</item>
        <item>ATSINANANA</item>
        <item>ANALANJIROFO</item>
        <item>AMORON\'I MANIA</item>
        <item>HAUTE MATSIATRA</item>
        <item>VATOVAVY-FITOVINANY</item>
        <item>ATSIMO-ATSINANANA</item>
        <item>IHOROMBE</item>
        <item>MENABE</item>
        <item>ATSIMO-ANDREFANA</item>
        <item>ANDROY</item>
        <item>ANOSY</item>
    </string-array>
    <string name="user_update_profil_text_title">Tena anova marina ve?</string>
    <string name="user_update_profil_input_hint_password">Teny miafina ankehitriny</string>
    <string name="activity_main_menu_business">Raharaham-barotra</string>
    <string name="activity_main_menu_chat">Firesahana</string>
    <string name="activity_main_menu_offer">Tolotra</string>
    <string name="activity_main_menu_payment">Fikirakirana VOLA</string>
    <string name="activity_main_menu_payment_menu">Menu VOLA</string>
    <string name="activity_main_menu_setting">Fikirana</string>
    <string name="activity_main_menu_info">Open LZT Official Site</string>
    <string name="activity_main_menu_about">Ny momba anay</string>
    <string name="activity_main_menu_sign_out">Hiala</string>
    <string-array name="nav_item_activity_titles">
        <item></item>
        <item>@string/activity_main_menu_offer</item>
        <item>@string/activity_main_menu_payment</item>
        <item>@string/activity_main_menu_payment_menu</item>
        <item>@string/activity_main_menu_chat</item>
        <item>@string/activity_main_menu_setting</item>
    </string-array>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="fragment_buy_toolBar_title">Entana</string>
    <string name="fragment_buy_tab_layout_search_item">MITADY ENTANA</string>
    <string name="fragment_buy_tab_layout_available_item">MIVAROTRA ENTANA</string>
    <string name="fragment_buy_post_request_title">Momba ilay entana</string>
    <string name="fragment_buy_post_request_product_hint">Hanao inona ianao?</string>
    <string name="fragment_buy_post_request_category_hint">Misafidiana sokajy iray</string>
    <string name="fragment_buy_post_request_category_select">Misafidiana</string>
    <string name="fragment_buy_post_request_category_text">Misafidiana iray</string>
    <string name="fragment_buy_post_request_quantity_text">Habetsahany</string>
    <string name="fragment_buy_post_request_quantity_error_empty">Firy ny habetsahany?</string>
    <string name="fragment_buy_post_request_unity_type_hint">Karazam-pamaram-bondrona</string>
    <string name="fragment_buy_post_request_price_hint">Vidiny</string>
    <string name="fragment_buy_post_request_price_error_empty">Ohatrinona ny vidiny?</string>
    <string name="fragment_buy_search_request_product_hint">Entana karohina</string>
    <string name="fragment_buy_btn_answer_request_text">Hamaly</string>
    <string name="fragment_buy_btn_get_request_text">Alaina</string>
    <string name="fragment_buy_footer_menu_add_text">Hanampy</string>
    <string name="fragment_buy_footer_menu_previous_text">Teo aloha</string>
    <string name="fragment_buy_footer_menu_next_ext">Manaraka</string>
    <string name="fragment_buy_switch_text_title">Valim-pikarohana</string>
    <string name="fragment_list_offer_toolbar_title">Lisitra</string>
    <string name="fragment_sell_post_request_title">Momba ilay entana</string>
    <string name="fragment_payment_solde_compte_text">VOLA AO ANATY VATA:</string>
    <string name="fragment_payment_menu_charge_text">Ampiditra vola ao anaty vata</string>
    <string name="fragment_payment_menu_give_money_text">Hamoaka vola ao anaty vata</string>
    <string name="fragment_payment_menu_send_money_text">Handoa na handefa vola</string>
    <string name="fragment_payment_menu_get_money_text">Handray vola</string>
    <string name="fragment_payment_toolbar_charge">Ampiditra VOLA</string>
    <string name="fragment_payment_toolbar_give_money">Hamoaka VOLA</string>
    <string name="fragment_payment_toolbar_send_money">Handefa VOLA</string>
    <string name="fragment_payment_toolbar_get_money">Handray VOLA</string>
    <string name="fragment_payment_charge_amount_text">Mari-bola ampidirina</string>
    <string name="fragment_payment_charge_amount_hint_text">mari-bola</string>
    <string name="fragment_payment_charge_phone_text">Laharana finday akana ny vola</string>
    <string name="fragment_payment_charge_phone_hint_spinner">03X</string>
    <string name="fragment_payment_charge_phone_code_error">Kaody</string>
    <string name="fragment_payment_charge_phone_hint_text">XXXXXXX</string>
    <string name="fragment_payment_charge_btn_submit">Alefa ny fangatahana</string>
    <string-array name="array_code_operator">
        <item>@string/fragment_payment_charge_phone_code_error</item>
        <item>032</item>
        <item>033</item>
        <item>034</item>
    </string-array>
    <string name="fragment_payment_give_money_amount_text">Mari-bola avoaka</string>
    <string name="fragment_payment_give_money_password_text">Teny miafinao</string>
    <string name="fragment_payment_give_money_password_hint">*****</string>
    <string name="fragment_payment_give_money_btn_submit">Alefa ny famoahana ny vola</string>
    <string name="fragment_payment_send_money_text_view_qr_code">QR Code ny olona handefasana ny VOLA</string>
    <string name="fragment_payment_send_money_amount_text">Mari-bola alefa</string>
    <string name="fragment_payment_send_money_btn_submit">Alefa ny vola</string>
    <string name="fragment_payment_charge_text_view_qr_code">QR Code andraisanao VOLA</string>
    <string name="activity_about_us_info_1">Le Zoma de Tana (version Android)</string>
    <string name="activity_about_us_info_2">\n\n\nCopyright &#169; 2k18 by Team (Hery-Nakay)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>