<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/bg_list_row"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".fragment.FragmentPaymentGiveMoney">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="?listPreferredItemPaddingLeft"
        android:paddingRight="?listPreferredItemPaddingRight">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="start"
            android:text="@string/fragment_payment_give_money_amount_text"
            android:textColor="@color/color_black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@color/transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/fragment_payment_give_money_edit_text_amount"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_gravity="start|center"
                android:layout_marginEnd="1dp"
                android:layout_weight="0.2"
                android:background="@drawable/payment_edit_text_bg_selector"
                android:fontFamily="monospace"
                android:gravity="end|center"
                android:hint="@string/fragment_payment_charge_amount_hint_text"
                android:inputType="number"
                android:maxLines="1"
                android:paddingRight="?listPreferredItemPaddingRight"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end|center"
                android:layout_weight="0.8"
                android:background="@drawable/payment_edit_text_bg_selector"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/app_payment_symbole_type_ariary_text"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="start"
            android:text="@string/fragment_payment_charge_phone_text"
            android:textColor="@color/color_black"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/fragment_payment_give_money_spinner_operator"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:fontFamily="monospace"
                android:gravity="center|start"
                android:text="@string/fragment_payment_charge_phone_hint_spinner"
                android:textColor="@color/color_black"
                android:textColorHighlight="@color/color_black"
                android:visibility="visible"
                app:met_floatingLabel="none" />

            <EditText
                android:id="@+id/fragment_payment_give_money_edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/fragment_payment_give_money_spinner_operator"
                android:background="@drawable/payment_edit_text_bg_selector"
                android:fontFamily="monospace"
                android:hint="@string/fragment_payment_charge_phone_hint_text"
                android:inputType="number"
                android:maxLength="7"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="start"
            android:text="@string/fragment_payment_give_money_password_text"
            android:textColor="@color/color_black"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center"
            android:background="@drawable/payment_edit_text_bg_selector"
            android:gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_black">

            <EditText
                android:id="@+id/fragment_payment_give_money_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:background="@null"
                android:fontFamily="monospace"
                android:gravity="left|center"
                android:hint="@string/fragment_payment_give_money_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textColorHint="@color/color_white"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/transparent" />

        <Button
            android:id="@+id/fragment_payment_give_money_btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDarker"
            android:fontFamily="monospace"
            android:text="@string/fragment_payment_give_money_btn_submit"
            android:textAllCaps="false"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>